<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/nome_item_EditText"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:hint="@string/nome_item_EditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/preco_item_EditText"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:hint="@string/preco_item_EditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save_button"
        android:id="@+id/cadastra_item_button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>