<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="silvio.com.bar5.MostraCardapioActivity"
    android:id="@+id/layoutcardapio"
    android:background="@drawable/menu_layout">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom_menu_menu">

        <ImageButton
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:id="@+id/menu_menu_button"
            android:background="@drawable/menu_on"
            android:contentDescription="@string/imagebutton_description"/>

        <ImageButton
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:id="@+id/menu_people_button"
            android:background="@drawable/people_off"
            android:contentDescription="@string/imagebutton_description"/>

        <ImageButton
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:id="@+id/menu_order_button"
            android:background="@drawable/orders_off"
            android:contentDescription="@string/imagebutton_description"/>

        <ImageButton
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:id="@+id/menu_bill_button"
            android:background="@drawable/bill_off"
            android:contentDescription="@string/imagebutton_description"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:id="@+id/listacardapio"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:textSize="24sp"
        android:id="@+id/abrecadastro_cardapio"
        android:layout_below="@+id/listacardapio"
        android:layout_alignLeft="@+id/listacardapio"
        android:layout_alignStart="@+id/listacardapio"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteAll_orders"
        android:id="@+id/deleteAllitem_button"
        android:layout_below="@+id/listacardapio"
        android:layout_alignRight="@+id/listacardapio"
        android:layout_alignEnd="@+id/listacardapio"
        android:layout_marginTop="10dp"/>


</RelativeLayout>